<resources>
    <string name="app_name">ALMOAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="olvido_su_contraseña">Olvido su contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="facturas">Facturas</string>
    <string name="usuarios">Usuarios</string>
    <string name="clientes">Clientes</string>
    <string name="productos">Productos</string>
    <string name="nueva_factura">Nueva factura</string>
    <!-- string relacionados con producto -->
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="edicion_producto">Edicion de producto</string>
    <string name="nombre_producto">Nombre del producto</string>
    <string name="descripcion_producto">Descripción del producto</string>
    <string name="costo_producto">Costo/Monto del producto</string>

    <!-- string relacionados con producto -->
    <string name="nuevo_cliente">Nuevo cliente</string>
    <string name="edicion_cliente">Edición de cliente</string>
    <string name="nombre_cliente">Nombre del cliente</string>
    <string name="direccion_cliente">Dirección del cliente</string>
    <string name="nit">NIT del cliente</string>

    <!-- string relacionados con seleccion de clientes-->
    <string name="seleccion_cliente">Selección de cliente</string>
    <string name="seleccion_producto">Selección de producto</string>

    <!-- botones de control -->
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="eliminar_elemento">Eliminar elemento</string>
    <string name="siguiente">Siguiente</string>
    <string name="anular_factura">Anular factura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>