<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_facturas">

    <fragment
        android:id="@+id/nav_facturas"
        android:name="com.almoapp.ui.home.HomeFragment"
        android:label="@string/facturas"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_facturas_to_seleccionCliente"
            app:destination="@id/seleccionCliente" />
        <action
            android:id="@+id/action_nav_facturas_to_modFactura"
            app:destination="@id/modFactura" />
        <argument
            android:name="factura"
            app:argType="com.almoapp.Models.Factura"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.almoapp.ui.gallery.GalleryFragment"
        android:label="@string/clientes"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_clientes_to_modCliente"
            app:destination="@id/modCliente" />
        <argument
            android:name="cliente"
            app:argType="com.almoapp.Models.Cliente"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.almoapp.ui.slideshow.SlideshowFragment"
        android:label="@string/productos"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_productos_to_modProducto"
            app:destination="@id/modProducto" />
        <argument
            android:name="producto"
            app:argType="com.almoapp.Models.Producto"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/modProducto"
        android:name="com.almoapp.ui.slideshow.ModProducto.ModProducto"
        android:label="@string/edicion_producto"
        tools:layout="@layout/fragment_mod_producto" >
        <action
            android:id="@+id/action_modProducto_to_nav_productos"
            app:destination="@id/nav_productos" />
    </fragment>
    <fragment
        android:id="@+id/modCliente"
        android:name="com.almoapp.ui.gallery.ModCliente.ModCliente"
        android:label="@string/edicion_cliente"
        tools:layout="@layout/fragment_mod_cliente" >
        <action
            android:id="@+id/action_modCliente_to_nav_clientes"
            app:destination="@id/nav_clientes" />
    </fragment>
    <fragment
        android:id="@+id/seleccionCliente"
        android:name="com.almoapp.ui.home.CrearFactura.SeleccionCliente"
        android:label="@string/seleccion_cliente"
        tools:layout="@layout/fragment_seleccion_cliente" >
        <action
            android:id="@+id/action_seleccionCliente_to_seleccionProductos"
            app:destination="@id/seleccionProductos" />
        <argument
            android:name="cliente"
            app:argType="com.almoapp.Models.Cliente"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/seleccionProductos"
        android:name="com.almoapp.ui.home.CrearFactura.SeleccionProductos"
        android:label="@string/seleccion_producto"
        tools:layout="@layout/fragment_seleccion_productos" >
        <action
            android:id="@+id/action_seleccionProductos_to_nav_facturas"
            app:destination="@id/nav_facturas" />
    </fragment>
    <fragment
        android:id="@+id/modFactura"
        android:name="com.almoapp.ui.home.ModFactura.ModFactura"
        android:label="@string/anular_factura"
        tools:layout="@layout/fragment_mod_factura" >
        <action
            android:id="@+id/action_modFactura_to_nav_facturas"
            app:destination="@id/nav_facturas" />
    </fragment>
</navigation>