<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.slideshow.ModProducto.ModProducto">

    <TextView
        android:id="@+id/textViewTituloProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/edicion_producto"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nombre_producto"
        app:layout_constraintEnd_toEndOf="@+id/textViewTituloProducto"
        app:layout_constraintStart_toStartOf="@+id/textViewTituloProducto"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloProducto" />

    <EditText
        android:id="@+id/editTextTextNombreProducto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/nombre_producto"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/descripcion_producto"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextNombreProducto"
        app:layout_constraintStart_toStartOf="@+id/editTextTextNombreProducto"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNombreProducto" />

    <EditText
        android:id="@+id/editTextDescripcionProducto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/descripcion_producto"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/costo_producto"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescripcionProducto"
        app:layout_constraintStart_toStartOf="@+id/editTextDescripcionProducto"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescripcionProducto" />

    <EditText
        android:id="@+id/editTextNumberDecimalMontoProducto"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/costo_producto"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/buttonGuardarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_almo"
        android:text="@string/guardar_cambios"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEliminarProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red_almo"
        android:text="@string/eliminar_elemento"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardarProducto"
        app:layout_constraintEnd_toEndOf="@+id/buttonGuardarProducto"
        app:layout_constraintStart_toStartOf="@+id/buttonGuardarProducto" />
</androidx.constraintlayout.widget.ConstraintLayout>